--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 }
             }
 
-            // Mostra o tabuleiro atualizado e o resultaddo do jogo
+            // Mostra o tabuleiro atualizado e o resultado atual do jogo
 
             function mostrarStatus ( ) {
                 if ( campoMinado.JogoStatus() == 0 )
@@ -58,7 +58,7 @@
             } 
 
 
-            // Exerce a lóogica do jogo para resolver o problema, abrino casas sem bombas
+            // Exerce a lóogica do jogo para resolver o problema, abrindo casas sem bombas
 
             function resolver ( ) {
                 for ( let x = 0; x < 9; x++ ) {
